# binoc-central

./: .gitignore  .gitmodules  client.mk  mach
mail/: app.mozbuild  configure.in  confvars.sh  (+1 more)
navigator/: Makefile.in  app.mozbuild  build.mk  configure.in  confvars.sh  moz.build
navigator/app/: Makefile.in  blocklist.xml  moz.build  nsNavigatorApp.cpp
navigator/app/defaults/: moz.build
navigator/app/defaults/pref/: general-prefs.inc.js  gre-prefs.inc.js
navigator/base/: jar.mn
navigator/branding/: README.txt
navigator/branding/locale/: brand.dtd  brand.properties
navigator/branding/official/: moz.build
navigator/branding/unofficial/: configure.sh  moz.build
navigator/branding/unstable/: moz.build
navigator/comm/: jar.mn
navigator/comm/content/: nsContextMenu.js
navigator/components/: moz.build  nsNavigatorGlue.js
navigator/components/dirprovider/src/: nsSuiteDirectoryProvider.cpp
navigator/components/permissions/content/: cookies.js  permissions.js
navigator/components/places/content/: browserPlacesViews.js  menu.xml
navigator/components/sessionstore/src/: nsSessionStore.js
navigator/components/shell/content/: setDesktopBackground.js  setDesktopBackground.xul
navigator/components/shell/public/: moz.build
navigator/components/shell/src/: ShellService.jsm  moz.build
navigator/config/: version.txt
navigator/installer/: Makefile.in  package-manifest.in  removed-files.in
navigator/installer/src/: defines.nsi.in
navigator/installer/windows/: Makefile.in
navigator/modules/: PolyGHL.jsm  moz.build
navigator/themes/: moz.build
(+95 files in other folders)
